tests/ui/traits/missing-dyn-trait-4.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/missing-dyn-trait-4.rs:6:14
   |
LL | fn guard(_s: Copy) -> bool {
   |              ^^^^
   |
   = note: `Copy` it is not object safe, so it can't be `dyn`
help: use a new generic type parameter, constrained by `Copy`
   |
LL | fn guard<T: Copy>(_s: T) -> bool {
   |         +++++++++     ~
help: you can also use an opaque type, but users won't be able to specify the type parameter when calling the `fn`, having to rely exclusively on type inference
   |
LL | fn guard(_s: impl Copy) -> bool {
   |              ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
